--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="SourceCodo\Building.cpp" />
     <ClCompile Include="SourceCodo\Camera.cpp" />
     <ClCompile Include="SourceCodo\CameraAssemble.cpp" />
+    <ClCompile Include="SourceCodo\CameraClear.cpp" />
     <ClCompile Include="SourceCodo\CameraEnding.cpp" />
     <ClCompile Include="SourceCodo\CameraGameOver.cpp" />
     <ClCompile Include="SourceCodo\CameraMission.cpp" />
@@ -203,6 +204,7 @@
     <ClCompile Include="SourceCodo\Sound.cpp" />
     <ClCompile Include="SourceCodo\SoundManagerAssemble.cpp" />
     <ClCompile Include="SourceCodo\SoundManagerBase.cpp" />
+    <ClCompile Include="SourceCodo\SoundManagerClear.cpp" />
     <ClCompile Include="SourceCodo\SoundManagerEnding.cpp" />
     <ClCompile Include="SourceCodo\SoundManagerGameOver.cpp" />
     <ClCompile Include="SourceCodo\SoundManagerMenuWindow.cpp" />
@@ -228,6 +230,7 @@
     <ClInclude Include="SourceCodo\Building.h" />
     <ClInclude Include="SourceCodo\Camera.h" />
     <ClInclude Include="SourceCodo\CameraAssemble.h" />
+    <ClInclude Include="SourceCodo\CameraClear.h" />
     <ClInclude Include="SourceCodo\CameraEnding.h" />
     <ClInclude Include="SourceCodo\CameraGameOver.h" />
     <ClInclude Include="SourceCodo\CameraMission.h" />
@@ -337,6 +340,7 @@
     <ClInclude Include="SourceCodo\Sound.h" />
     <ClInclude Include="SourceCodo\SoundManagerAssemble.h" />
     <ClInclude Include="SourceCodo\SoundManagerBase.h" />
+    <ClInclude Include="SourceCodo\SoundManagerClear.h" />
     <ClInclude Include="SourceCodo\SoundManagerEnding.h" />
     <ClInclude Include="SourceCodo\SoundManagerGameOver.h" />
     <ClInclude Include="SourceCodo\SoundManagerMenuWindow.h" />
