--- a/ShiningRoadProject/ShiningRoadProject.vcxproj
+++ b/ShiningRoadProject/ShiningRoadProject.vcxproj
@@ -188,12 +188,12 @@
     <ClCompile Include="SourceCodo\RoboTakeoff.cpp" />
     <ClCompile Include="SourceCodo\SceneAssemble.cpp" />
     <ClCompile Include="SourceCodo\SceneBase.cpp" />
-    <ClCompile Include="SourceCodo\SceneClear.cpp" />
+    <ClCompile Include="SourceCodo\SceneMovieClear.cpp" />
     <ClCompile Include="SourceCodo\SceneEnding.cpp" />
     <ClCompile Include="SourceCodo\SceneGameOver.cpp" />
     <ClCompile Include="SourceCodo\SceneMission.cpp" />
     <ClCompile Include="SourceCodo\SceneMovieBase.cpp" />
-    <ClCompile Include="SourceCodo\SceneTakeoff.cpp" />
+    <ClCompile Include="SourceCodo\SceneMovieTakeoff.cpp" />
     <ClCompile Include="SourceCodo\SceneTitle.cpp" />
     <ClCompile Include="SourceCodo\ScreenTexture.cpp" />
     <ClCompile Include="SourceCodo\Shot.cpp">
@@ -322,14 +322,14 @@
     <ClInclude Include="SourceCodo\SceneAssemble.h" />
     <ClInclude Include="SourceCodo\SceneAssembleInformation.h" />
     <ClInclude Include="SourceCodo\SceneBase.h" />
-    <ClInclude Include="SourceCodo\SceneClear.h" />
+    <ClInclude Include="SourceCodo\SceneMovieClear.h" />
     <ClInclude Include="SourceCodo\SceneEnding.h" />
     <ClInclude Include="SourceCodo\SceneGameOver.h" />
     <ClInclude Include="SourceCodo\SceneGameOverInformation.h" />
     <ClInclude Include="SourceCodo\SceneMission.h" />
     <ClInclude Include="SourceCodo\SceneMissionInformation.h" />
     <ClInclude Include="SourceCodo\SceneMovieBase.h" />
-    <ClInclude Include="SourceCodo\SceneTakeoff.h" />
+    <ClInclude Include="SourceCodo\SceneMovieTakeoff.h" />
     <ClInclude Include="SourceCodo\SceneTitle.h" />
     <ClInclude Include="SourceCodo\SceneTitleInformation.h" />
     <ClInclude Include="SourceCodo\ScreenTexture.h" />
